init serverless endpoint

--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "netlify dev"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "netlify-cli": "^8.0.5",
     "vue": "^3.0.0"
   },
   "devDependencies": {
